--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,7 +63,7 @@ server-template-server:
   links:
     - server-template-cache:server-template-cache
     - server-template-database:server-template-database
-    - server-template-bucket:server-template-bucket
+    - server-template-storage:server-template-storage
   environment:
     NODE_ENV: development
     ENV: dev # TODO remove?
@@ -83,12 +83,11 @@ server-template-server:
     DATABASE_USER: server_template_local_app
     DATABASE_SECRET: secret
     DATABASE_POOL_MAX: '10'
-    BUCKET_HOST: server-template-bucket
-    BUCKET_ID: server_template_local
-    BUCKET_REGION: europe-west1-c
-    BUCKET_PROTOCOL: http
-    BUCKET_ACCESS_KEY: 070UEOQR6LX4YPZLFU0V
-    BUCKET_SECRET_KEY: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
+    S3_URL: http://server-template-storage:9000/
+    S3_REGION: milkyway
+    S3_BUCKET: bucket
+    S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
+    S3_KEY_SECRET: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
 
 server-template-cache:
   container_name: server-template-cache
@@ -112,13 +111,13 @@ server-template-database:
   volumes:
     - "./database:/docker-entrypoint-initdb.d"
 
-server-template-bucket:
-  container_name: server-template-bucket
-  image: minio/minio
+server-template-storage:
+  container_name: server-template-storage
+  image: minio/minio:latest
   restart: on-failure
-  command: server /export
-  ports:
-    - "9000"
+  command: server /storage
   environment:
     MINIO_ACCESS_KEY: 070UEOQR6LX4YPZLFU0V
     MINIO_SECRET_KEY: CVQVa33NekSiOJGnevSY5ITr8Rql8lFkp22WhLQ+
+  volumes:
+    - "./storage:/storage"
