--- a/scripts/server-template/templates/ingress.yaml
+++ b/scripts/server-template/templates/ingress.yaml
@@ -68,19 +68,19 @@ spec:
           {{ if $root.Values.stack.server }}
           - path: {{ $root.Values.server.path | quote }}
             backend:
-              serviceName: server-template-{{ $root.Values.stack.server }}
+              serviceName: {{ template "name" . }}-{{ $root.Values.stack.server }}
               servicePort: {{ $root.Values.server.port }}
           {{ end }}
           {{ if $root.Values.stack.admin }}
           - path: {{ $root.Values.admin.path | quote }}
             backend:
-              serviceName: server-template-{{ $root.Values.stack.admin }}
+              serviceName: {{ template "name" . }}-{{ $root.Values.stack.admin }}
               servicePort: {{ $root.Values.admin.port }}
           {{ end }}
           {{ if $root.Values.stack.client }}
           - path: {{ $root.Values.client.path | quote }}
             backend:
-              serviceName: server-template-{{ $root.Values.stack.client }}
+              serviceName: {{ template "name" . }}-{{ $root.Values.stack.client }}
               servicePort: {{ $root.Values.client.port }}
           {{ end }}
     {{- end -}}
