--- a/package.json
+++ b/package.json
@@ -3,41 +3,53 @@
   "description": "",
   "private": true,
   "scripts": {
+    "taito-oper-init:local:clean": "taito -z init --clean && npm run clean:storage",
     "info:local":
       "taito secrets | grep 'Showing\\|PASSWORD'; echo; echo 'TODO: add local users to package.json'",
     "info:dev":
       "taito secrets:dev | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add dev users to package.json'",
     "info:test":
       "taito secrets:test | grep -A 1 'Showing\\|user.'; echo; echo 'TODO: add test users to package.json'",
-    "ci-test-unit": "echo TODO: implement test:unit in package.json",
-    "ci-test-api:local":
-      "echo TODO: implement test:api in package.json. Env=${taito_env} url=${taito_app_url} user=${test_api_user} password=${test_api_password}",
-    "ci-test-e2e:local":
-      "echo TODO: implement test:e2e in package.json. Env=${taito_env} url=${taito_app_url} user=${test_e2e_user} password=${test_e2e_password}",
-    "ci-docs": "echo TODO: generate docs in package.json",
-
-    "analyze": "( cd client; npm run analyze )",
-    "lint": "npm-run-all --parallel lint:admin lint:client lint:server",
+    "info:staging": "TODO",
+    "info:prod": "TODO",
+    "scan": "npm run lint; npm run flow; echo 'TODO: sonar scan?'",
+    "lint": "npm-run-all --parallel lint:admin lint:client lint:server lint:worker",
     "lint:admin": "eslint ./admin --ignore-path ./admin/.eslintignore --quiet",
     "lint:client":
       "eslint ./client --ignore-path ./client/.eslintignore --quiet",
     "lint:server":
       "eslint ./server --ignore-path ./server/.eslintignore --quiet",
+    "lint:worker": "echo TODO lint:worker",
+    "analyze": "npm-run-all --parallel analyze:admin analyze:client",
+    "analyze:admin": "( cd admin; npm run analyze )",
+    "analyze:client": "( cd client; npm run analyze )",
+    "unit": "npm-run-all --parallel unit:admin unit:client unit:server unit:worker",
+    "unit:admin": "taito run: admin -- npm run unit",
+    "unit:client": "taito run: client -- npm run unit",
+    "unit:server": "taito run: server -- npm run unit",
+    "unit:worker": "echo TODO unit:worker",
+    "test": "npm-run-all --parallel test:admin test:client test:server test:worker",
+    "test:admin": "taito util-test:${taito_env} admin ${taito_app_url} ${test_api_user}",
+    "test:client": "taito util-test:${taito_env} client ${taito_app_url} ${test_api_user}",
+    "test:server": "taito util-test:${taito_env} server ${taito_app_url} ${test_api_user}",
+    "test:worker": "echo TODO test:worker",
+    "docs": "echo TODO: generate docs in package.json",
+    "contacts-development":
+      "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
+    "contacts-maintenance":
+      "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
+
+    "clean:storage": "rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/",
     "flow": "flow",
     "precommit":
       "echo 'NOTE: Running precommit inside taito container for security reasons'; taito precommit",
     "prepush":
       "echo 'NOTE: Running prepush inside taito container for security reasons'; taito prepush",
     "taito-precommit": "npm run lint",
-    "taito-prepush": "npm-run-all --parallel lint flow ci-test-unit",
+    "taito-prepush": "npm-run-all --parallel lint flow unit",
     "commit": "echo 'Warning: Running commitizen locally'; git-cz",
     "commitmsg":
       "echo 'Warning: Running validate-commit-msg locally'; validate-commit-msg",
-    "contacts-development":
-      "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
-    "contacts-maintenance":
-      "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
-    "ci-scan": "npm run lint; npm run flow; echo 'TODO: sonar scan?'",
     "ci-release-pre:prod": "semantic-release pre",
     "ci-release-post:prod": "semantic-release post"
   },
