--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -1,11 +1,13 @@
 stack:
   admin: admin
-  client: client
-  server: server
-  function:
   cache:
+  client: client
   database: database
+  function:
+  queue:
+  server: server
   storage: storage
+  worker:
 
 # Default settings
 
@@ -57,9 +59,22 @@ server:
     S3_BUCKET: server-template-dev
     S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
 
-cache:
-  image: redis
+worker:
   replicas: 1
+  autoscale: false
+  minReplicas: 2
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 50
+  secrets:
+    S3_KEY_SECRET: storage.server-template.gateway
+  env:
+    SENTRY_DSN: #sentryDSN
+    DEBUG: false
+    ENV: production
+    S3_URL: http://server-template-storage:9000/
+    S3_REGION: europe-west1
+    S3_BUCKET: server-template-dev
+    S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
 
 # minio as storage gateway
 storage:
@@ -71,6 +86,14 @@ storage:
     MINIO_SECRET_KEY: storage.server-template.gateway
   env:
     MINIO_ACCESS_KEY: 070UEOQR6LX4YPZLFU0V
+
+cache:
+  image: redis:alpine
+  replicas: 1
+
+queue:
+  image: rabbitmq:alpine
+  replicas: 1
 
 # TODO configure resources
 # resources: {}
