--- a/scripts/helm/templates/deployment.yaml
+++ b/scripts/helm/templates/deployment.yaml
@@ -250,6 +250,113 @@ spec:
 
 {{ end }}
 
+{{ if .Values.stack.worker }}
+{{ if .Values.worker.autoscale }}
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: {{ template "name" . }}-{{ .Values.stack.worker }}
+  labels:
+    app: {{ template "name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+spec:
+  scaleTargetRef:
+    apiVersion: extensions/v1beta1
+    kind: Deployment
+    name: {{ template "name" . }}-{{ .Values.stack.worker }}
+  minReplicas: {{ .Values.worker.minReplicas }}
+  maxReplicas: {{ .Values.worker.maxReplicas }}
+  targetCPUUtilizationPercentage: {{ .Values.worker.targetCPUUtilizationPercentage }}
+{{ end }}
+---
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: {{ template "name" . }}-{{ .Values.stack.worker }}
+  labels:
+    app: {{ template "name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+spec:
+  replicas: {{ .Values.worker.replicas }}
+  template:
+    metadata:
+      labels:
+        app: {{ template "name" . }}
+        release: {{ .Release.Name }}
+        tier: backend
+        role: worker
+    spec:
+      containers:
+        - name: {{ template "name" . }}-{{ .Values.stack.worker }}
+          image: {{ .Values.repository -}} / {{- .Values.stack.worker -}} : {{- .Values.build.imageTag }}
+          imagePullPolicy: {{ .Values.imagePullPolicy | quote }}
+          ports:
+            - containerPort: {{ .Values.worker.port }}
+          livenessProbe:
+            httpGet:
+              path: /infra/healthz
+              port: {{ .Values.worker.port }}
+              scheme: HTTP
+            initialDelaySeconds: 30
+            periodSeconds: 15
+            timeoutSeconds: 5
+          envFrom:
+            - prefix: COMMON_
+              configMapRef:
+                name: {{ template "name" . }}-common
+          env:
+            {{- range $name, $value := .Values.worker.env }}
+            - name: {{ $name }}
+              value: {{ $value | quote }}
+            {{- end }}
+            {{- range $name, $value := .Values.worker.secrets }}
+            - name: {{ $name }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $value }}
+                  key: SECRET
+            {{- end }}
+            - name: API_PORT
+              value: {{ .Values.worker.port | quote }}
+            - name: API_BINDADDR
+              value: {{ .Values.worker.bindAddr | quote }}
+  {{ if and (.Values.stack.database) (ne .Values.env "local") }}
+        # TODO only when zone.provider == "gcloud"
+        - name: cloudsql-proxy
+          image: gcr.io/cloudsql-docker/gce-proxy:1.11
+          command:
+            - /cloud_sql_proxy
+            - -verbose=false
+            - --dir=/cloudsql
+            - -instances={{ .Values.database.db }}=tcp:{{ .Values.database.port }}
+            - -credential_file=/secrets/cloudsql/SECRET
+          volumeMounts:
+            - name: cloudsql-instance-credentials
+              mountPath: /secrets/cloudsql
+              readOnly: true
+            - name: ssl-certs
+              mountPath: /etc/ssl/certs
+            - name: cloudsql
+              mountPath: /cloudsql
+      # TODO: Could these be common volumes for all apps?
+      volumes:
+        - name: cloudsql-instance-credentials
+          secret:
+            secretName: gcloud.cloudsql.proxy
+        - name: ssl-certs
+          hostPath:
+            path: /etc/ssl/certs
+        - name: cloudsql
+          emptyDir:
+  {{ end }}
+
+{{ end }}
+
 {{ if .Values.stack.cache }}
 ---
 apiVersion: extensions/v1beta1
@@ -287,6 +394,52 @@ spec:
               value: {{ $value | quote }}
             {{- end }}
             {{- range $name, $value := .Values.cache.secrets }}
+            - name: {{ $name }}
+              valueFrom:
+                secretKeyRef:
+                  name: {{ $value }}
+                  key: SECRET
+            {{- end }}
+
+{{ end }}
+
+{{ if .Values.stack.queue }}
+---
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: {{ template "name" . }}-{{ .Values.stack.queue }}
+  labels:
+    app: {{ template "name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+spec:
+  replicas: {{ .Values.queue.replicas }}
+  template:
+    metadata:
+      labels:
+        app: {{ template "name" . }}
+        release: {{ .Release.Name }}
+        tier: backend
+        role: queue
+    spec:
+      containers:
+        - name: {{ template "name" . }}-{{ .Values.stack.queue }}
+          image: {{ .Values.queue.image | quote }}
+          imagePullPolicy: {{ .Values.imagePullPolicy | quote }}
+          ports:
+            - containerPort: {{ .Values.queue.port }}
+        # TODO liveness and readiness probe
+        # - name: {{ template "name" . }}-{{ .Values.stack.queue }}-monitor
+        #   image: wikiwi/stackdriver-agent
+        #   imagePullPolicy: {{ .Values.imagePullPolicy | quote }}
+          env:
+            {{- range $name, $value := .Values.queue.env }}
+            - name: {{ $name }}
+              value: {{ $value | quote }}
+            {{- end }}
+            {{- range $name, $value := .Values.queue.secrets }}
             - name: {{ $name }}
               valueFrom:
                 secretKeyRef:
