--- a/scripts/helm/templates/service.yaml
+++ b/scripts/helm/templates/service.yaml
@@ -81,6 +81,27 @@ spec:
     - port: {{ .Values.cache.port }}
 {{ end }}
 
+{{ if .Values.stack.queue }}
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ template "name" . }}-{{ .Values.stack.queue }}
+  labels:
+    app: {{ template "name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+spec:
+  selector:
+    app: {{ template "name" . }}
+    release: {{ .Release.Name }}
+    tier: backend
+    role: queue
+  ports:
+    - port: {{ .Values.queue.port }}
+{{ end }}
+
 {{ if and (.Values.stack.database) (eq .Values.env "local") }}
 ---
 apiVersion: v1
