--- a/scripts/helm/values.yaml
+++ b/scripts/helm/values.yaml
@@ -51,19 +51,14 @@ server:
   maxReplicas: 5
   targetCPUUtilizationPercentage: 50
 
-# TODO multiple replicas as redis cluster
-cache:
-  port: 6379
-  image: redis
-  replicas: 1
-
-database:
-  port: 5432
-  image: kiasaki/alpine-postgres:latest
-  replicas: 1
-  db: gcloud-temp1:europe-west1:common-postgres
-  poolMin: 5
-  poolMax: 10
+worker:
+  port: 3331
+  bindAddr: 0.0.0.0
+  replicas: 2
+  autoscale: false
+  minReplicas: 2
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 50
 
 storage:
   port: 9000
@@ -71,6 +66,16 @@ storage:
   replicas: 1
   host: storage
   region: europe-west1-c
+
+cache:
+  port: 6379
+  image: redis
+  replicas: 1
+
+queue:
+  port: 5672
+  image: rabbitmq:alpine
+  replicas: 1
 
 # TODO configure resources
 # resources: {}
