--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -76,6 +76,12 @@ worker:
     S3_BUCKET: server-template-dev
     S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
 
+database:
+  port: 5432
+  db: gcloud-temp1:europe-west1:common-postgres
+  poolMin: 5
+  poolMax: 10
+
 # minio as storage gateway
 storage:
   image: minio/minio
