--- a/scripts/helm/templates/deployment.yaml
+++ b/scripts/helm/templates/deployment.yaml
@@ -202,6 +202,14 @@ spec:
             - prefix: COMMON_
               configMapRef:
                 name: {{ template "name" . }}-common
+            {{ if .Values.stack.database }}
+            - prefix: DATABASE_
+              configMapRef:
+                name: {{ template "name" . }}-database
+            - prefix: DATABASE_
+              secretRef:
+                name: db.{{ template "fullname" . }}.app
+            {{ end }}
           env:
             {{- range $name, $value := .Values.server.env }}
             - name: {{ $name }}
